--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -40,3 +40,5 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem "jwt", "~> 2.3"
 
 gem "jsonapi-serializer", "~> 2.2"
+
+gem "pundit", "~> 2.1"
