--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
         run: bundle exec rake db:schema:load
 
       - name: Run Minitest tests
-        run: bundle exec rails test -cv
+        run: bundle exec rails test
 
       - name: Run RuboCop lints
         run: bundle exec rubocop --parallel
