--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,10 +18,10 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    defaults:
-      run:
-        shell: bash
-        working-directory: ./backend
+    # defaults:
+    #   run:
+    #     shell: bash
+    #     working-directory: ./backend
 
     services:
       postgres:
@@ -61,12 +61,16 @@ jobs:
 
       - name: Create the database
         run: bundle exec rake db:create
+        working-directory: ./backend
 
       - name: Load the database schema
         run: bundle exec rake db:schema:load
+        working-directory: ./backend
 
       - name: Run Minitest tests
         run: bundle exec rails test
+        working-directory: ./backend
 
       - name: Run RuboCop lints
         run: bundle exec rubocop --parallel
+        working-directory: ./backend
