--- a/backend/.rubocop.yml
+++ b/backend/.rubocop.yml
@@ -3,6 +3,9 @@ AllCops:
   NewCops: enable
   Exclude:
     - db/schema.rb
+    - node_modules/**/*
+    - tmp/**/*
+    - vendor/**/*
 
 ### Layout ###
 
