--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,3 +66,41 @@ jobs:
 
       - name: Run Minitest tests
         run: bundle exec rails test
+
+  frontend:
+    name: Run tests and ESLint lints
+
+    runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        shell: bash
+        working-directory: ./frontend
+
+    strategy:
+      matrix:
+        node-version:
+          - 14
+
+    steps:
+      - name: Checkout the repo
+        uses: actions/checkout@v2
+
+      - name: Set up PNPM
+        uses: pnpm/action-setup@v2
+
+      - name: Set up Node v${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: pnpm
+          cache-dependency-path: ./frontend/pnpm-lock.yaml
+
+      - name: Run ESLint lints
+        run: pnpm run lint
+
+      # - name: Run unit tests
+      #   run: pnpm run test:unit
+
+      # - name: Run e2e tests
+      #   run: pnpm run test:e2e
