--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,6 +88,8 @@ jobs:
 
       - name: Set up PNPM
         uses: pnpm/action-setup@v2
+        with:
+          version: latest
 
       - name: Set up Node v${{ matrix.node-version }}
         uses: actions/setup-node@v2
