--- a/crawler/package.json
+++ b/crawler/package.json
@@ -15,7 +15,6 @@
   },
   "author": "",
   "devDependencies": {
-    "@types/crawler": "^1.2.2",
     "@types/node": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
@@ -30,7 +29,7 @@
     "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
-    "playwright": "^1.17.2",
-    "solr-client": "^0.10.0-rc9"
+    "axios": "^0.24.0",
+    "playwright": "^1.17.2"
   }
 }
