--- a/crawler/package.json
+++ b/crawler/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
-    "playwright": "^1.17.2"
+    "playwright": "^1.17.2",
+    "redis": "^4.0.2"
   }
 }
