--- a/backend/test/fixtures/users.yml
+++ b/backend/test/fixtures/users.yml
@@ -5,59 +5,59 @@
 admin:
   username: admin
   password_digest: <%= password_digest %>
-  about: this is an admin
+  bio: this is an admin
   role: 1
 
 mod1:
   username: mod1
   password_digest: <%= password_digest %>
-  about: this is a mod
+  bio: this is a mod
   role: 2
 
 mod2:
   username: mod2
   password_digest: <%= password_digest %>
-  about: this is a mod
+  bio: this is a mod
   role: 2
 
 mod3:
   username: mod3
   password_digest: <%= password_digest %>
-  about: this is a mod
+  bio: this is a mod
   role: 2
 
 user1:
   username: user1
   password_digest: <%= password_digest %>
-  about: this is a peasant
+  bio: this is a peasant
   role: 0
 
 user2:
   username: user2
   password_digest: <%= password_digest %>
-  about: this is a peasant
+  bio: this is a peasant
   role: 0
 
 user3:
   username: user3
   password_digest: <%= password_digest %>
-  about: this is a peasant
+  bio: this is a peasant
   role: 0
 
 user4:
   username: user4
   password_digest: <%= password_digest %>
-  about: this is a peasant
+  bio: this is a peasant
   role: 0
 
 user5:
   username: user5
   password_digest: <%= password_digest %>
-  about: this is a peasant
+  bio: this is a peasant
   role: 0
 
 user6:
   username: user6
   password_digest: <%= password_digest %>
-  about: this is a peasant
+  bio: this is a peasant
   role: 0
