--- a/backend/config/database.yml
+++ b/backend/config/database.yml
@@ -17,23 +17,27 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  host: localhost
+  host: <%= ENV["POSTGRES_HOST"] %>
+  port: <%= ENV.fetch("POSTGRES_PORT") { "5432" } %>
+  database: <%= ENV["POSTGRES_DB"] %>
+  username: <%= ENV["POSTGRES_USER"] %>
+  password: <%= ENV["POSTGRES_PASSWORD"] %>
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
-  database: birdybop_development
+  # database: birdybop_development
 
-  # The specified database role being used to connect to postgres.
-  # To create additional roles in postgres see `$ createuser --help`.
-  # When left blank, postgres will use the default role. This is
-  # the same name as the operating system user running Rails.
-  username: birdybop
+  # # The specified database role being used to connect to postgres.
+  # # To create additional roles in postgres see `$ createuser --help`.
+  # # When left blank, postgres will use the default role. This is
+  # # the same name as the operating system user running Rails.
+  # username: birdybop
 
-  # The password associated with the postgres role (username).
-  password: birdybop
+  # # The password associated with the postgres role (username).
+  # password: birdybop
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -58,9 +62,9 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: birdybop_test
-  username: birdybop
-  password: birdybop
+  # database: birdybop_test
+  # username: birdybop
+  # password: birdybop
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -84,6 +88,6 @@ test:
 #
 production:
   <<: *default
-  database: birdybop_production
-  username: birdybop
-  password: <%= ENV['BIRDYBOP_DATABASE_PASSWORD'] %>
+  # database: birdybop_production
+  # username: birdybop
+  # password: <%= ENV['BIRDYBOP_DATABASE_PASSWORD'] %>
