--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,76 +1,97 @@
-# Adapted from https://github.com/docker-solr/docker-solr-examples/blob/0e0fd83696d6eb7317b372a34facb06c940c660f/docker-compose/docker-compose.yml
-#
-# > A docker-compose.yml to start a simple cluster with three ZooKeeper nodes
-# > and three Solr nodes.
-#
-version: '3.7'
+# Adapted from this DigitalOcean tutorial:
+# https://www.digitalocean.com/community/tutorials/containerizing-a-ruby-on-rails-application-for-development-with-docker-compose
+# ...as well as from these guides:
+# https://www.codewithjason.com/dockerize-rails-application/
+# https://evilmartians.com/chronicles/ruby-on-whales-docker-for-ruby-rails-development
+
+version: "3.8"
+
+x-rails: &rails
+  build:
+    context: ./backend
+    dockerfile: Dockerfile
+  stdin_open: true
+  tty: true
+  volumes:
+    - ./backend:/app:cached
+    - bundle:/usr/local/bundle
+  env_file: ./backend/.env
+  environment:
+    RAILS_ENV: development
+    SEARCHER_BASE_URL: "http://searx:8080"
+  #
+  # From "Ruby on Whales":
+  #
+  #   We also _tell_ Docker to use tmpfs for `/tmp` folder within a container
+  #   and also for the `tmp/pids` folder of our application--this way we
+  #   ensure that no `server.pid` survives the container exit (say good-bye to
+  #   "A server is already started" errors):
+  #
+  tmpfs:
+    - /tmp
+    - /app/tmp/pids
 
 services:
-  solr1:
-    image: solr:8.11.1
-    container_name: solr1
-    ports:
-     - "8983:8983"
-    environment:
-      - ZK_HOST=zoo1:2181,zoo2:2181
-    networks:
-      - solr
+  rails_runner:
+    <<: *rails
     depends_on:
-      - zoo1
-      - zoo2
+      - postgres
+      - redis
+    profiles:
+      - debug
+    entrypoint: ./entrypoints/rails-runner-entrypoint.sh
 
-  solr2:
-    image: solr:8.11.1
-    container_name: solr2
-    ports:
-     - "8982:8983"
-    environment:
-      - ZK_HOST=zoo1:2181,zoo2:2181
-    networks:
-      - solr
+  backend:
+    <<: *rails
     depends_on:
-      - zoo1
-      - zoo2
-
-  zoo1:
-    image: zookeeper:3.7.0
-    container_name: zoo1
-    restart: always
-    hostname: zoo1
+      - postgres
+      - redis
     ports:
-      - 2181:2181
-      - 7001:7000
+      - "3000:3000"
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    stdin_open: true
+    tty: true
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./frontend:/app:cached
+      - node_modules:/app/node_modules
     environment:
-      ZOO_MY_ID: 1
-      ZOO_SERVERS: server.1=zoo1:2888:3888;2181 server.2=zoo2:2888:3888;2181
-      ZOO_4LW_COMMANDS_WHITELIST: mntr, conf, ruok
-      ZOO_CFG_EXTRA: "metricsProvider.className=org.apache.zookeeper.metrics.prometheus.PrometheusMetricsProvider metricsProvider.httpPort=7000 metricsProvider.exportJvmInfo=true"
-    networks:
-      - solr
+      VUE_APP_BACKEND_BASE_URL: "http://localhost:3000"
+      VUE_APP_SEARCHER_BASE_URL: "http://localhost:3000" # tunnel through backend
 
-  zoo2:
-    image: zookeeper:3.7.0
-    container_name: zoo2
-    restart: always
-    hostname: zoo2
-    ports:
-      - 2182:2181
-      - 7002:7000
+  searx:
+    image: searx/searx
+    volumes:
+      - ./searx:/etc/searx
     environment:
-      ZOO_MY_ID: 2
-      ZOO_SERVERS: server.1=zoo1:2888:3888;2181 server.2=zoo2:2888:3888;2181
-      ZOO_4LW_COMMANDS_WHITELIST: mntr, conf, ruok
-      ZOO_CFG_EXTRA: "metricsProvider.className=org.apache.zookeeper.metrics.prometheus.PrometheusMetricsProvider metricsProvider.httpPort=7000 metricsProvider.exportJvmInfo=true"
-    networks:
-      - solr
+      BASE_URL: "http://localhost:9090/"
 
-  redis1:
-    image: redis:6.2.6
-    container_name: redis1
+  sidekiq:
+    <<: *rails
+    depends_on:
+      - backend
+      - postgres
+      - redis
+    entrypoint: ./entrypoints/sidekiq-entrypoint.sh
+
+  postgres:
+    image: postgres:14.1
     restart: always
-    hostname: redis1
-    ports:
-      - 6379:6379
+    volumes:
+      - ./backend/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - db_data:/var/lib/postgresql/data
+    env_file: ./backend/.env
 
-networks:
-  solr:
+  redis:
+    image: redis:6.2
+    restart: always
+
+volumes:
+  bundle:
+  db_data:
+  node_modules:
