--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,53 +3,42 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint --no-fix",
-    "lint:fix": "vue-cli-service lint",
-    "test:unit": "ts-mocha --paths --project ./tsconfig.test.json"
+    "dev": "vite --host 0.0.0.0 --port 8080 --clearScreen false",
+    "build": "vue-tsc --noEmit && vite build",
+    "preview": "vite preview --port 5050",
+    "test:unit": "vitest --environment jsdom --run",
+    "test:unit:watch": "vitest --environment jsdom --watch",
+    "typecheck": "vue-tsc --noEmit && vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --no-fix",
+    "lint:fix": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix"
   },
   "dependencies": {
     "axios": "^0.24.0",
-    "bootstrap": "^4.5.3",
-    "bootstrap-vue": "^2.21.2",
-    "core-js": "^3.6.5",
-    "jquery": "^3.6.0",
     "lodash": "^4.17.21",
-    "popper.js": "^1.16.1",
-    "portal-vue": "^2.1.7",
+    "pinia": "^2.0.11",
     "register-service-worker": "^1.7.1",
     "simpledotcss": "^2.0.1",
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vue": "^3.2.29",
+    "vue-router": "^4.0.12"
   },
   "devDependencies": {
+    "@rushstack/eslint-patch": "^1.1.0",
     "@types/chai": "^4.3.0",
+    "@types/jsdom": "^16.2.14",
     "@types/lodash": "^4.14.178",
     "@types/mocha": "^9.1.0",
-    "@types/node": "^17.0.14",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-pwa": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/eslint-config-typescript": "^7.0.0",
-    "chai": "^4.3.6",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "mocha": "^9.2.0",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
-    "ts-mocha": "^9.0.2",
-    "ts-node": "^10.4.0",
-    "tsconfig-paths": "^3.12.0",
-    "typescript": "~4.1.5",
-    "vue-template-compiler": "^2.6.11",
-    "webpack": "^5.65.0"
+    "@types/node": "^16.11.22",
+    "@vitejs/plugin-vue": "^2.1.0",
+    "@vue/eslint-config-typescript": "^10.0.0",
+    "@vue/test-utils": "^2.0.0-rc.18",
+    "@vue/tsconfig": "^0.1.3",
+    "eslint": "^8.5.0",
+    "eslint-plugin-vue": "^8.2.0",
+    "jsdom": "^19.0.0",
+    "sass": "^1.49.7",
+    "typescript": "~4.5.5",
+    "vite": "^2.7.13",
+    "vitest": "^0.2.5",
+    "vue-tsc": "^0.31.1"
   }
 }
