--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,10 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "dompurify": "^2.3.6",
+    "highlight.js": "^11.4.0",
     "lodash": "^4.17.21",
+    "marked": "^4.0.12",
     "pinia": "^2.0.11",
     "register-service-worker": "^1.7.1",
     "simpledotcss": "^2.0.1",
@@ -24,8 +27,10 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
     "@types/chai": "^4.3.0",
+    "@types/dompurify": "^2.3.3",
     "@types/jsdom": "^16.2.14",
     "@types/lodash": "^4.14.178",
+    "@types/marked": "^4.0.2",
     "@types/mocha": "^9.1.0",
     "@types/node": "^16.11.22",
     "@vitejs/plugin-vue": "^2.1.0",
