--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "vite --host 0.0.0.0 --port 8080 --clearScreen false",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vue-tsc --noEmit && vite build --mode production",
     "preview": "vite preview --port 5050",
     "test:unit": "vitest --environment jsdom --run",
     "test:unit:watch": "vitest --environment jsdom --watch",
     "typecheck": "vue-tsc --noEmit && vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --no-fix",
-    "lint:fix": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix"
+    "lint:fix": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
+    "deploy": "aws --profile keeshu-deployer s3 sync ./dist s3://www.birdybop.com --delete"
   },
   "dependencies": {
     "axios": "^0.24.0",
