--- a/backend/Dockerfile.production
+++ b/backend/Dockerfile.production
@@ -45,7 +45,7 @@ COPY Gemfile Gemfile.lock ./
 # installed earlier.
 RUN bundle config build.nokogiri --use-system-libraries
 
-RUN bundle check || bundle install
+RUN bundle check || bundle install --without development test
 
 ## API-only mode; no need.
 # COPY package.json yarn.lock ./
@@ -53,4 +53,8 @@ RUN bundle check || bundle install
 
 COPY . .
 
-ENTRYPOINT ["./entrypoints/docker-entrypoint.sh"]
+EXPOSE 3000
+
+ENV RAILS_LOG_TO_STDOUT true
+
+CMD ["rails", "server", "-b", "0.0.0.0", "-p", "3000"]
